--- a/opera.yml
+++ b/opera.yml
@@ -15,31 +15,28 @@ services:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
     ports:
-      - ${EC_P2P_PORT}:${EC_P2P_PORT}/tcp
-      - ${EC_P2P_PORT}:${EC_P2P_PORT}/udp
-    expose:
-      - ${EC_RPC_PORT}/tcp
-      - ${EC_WS_PORT}/tcp
+      - ${EL_P2P_PORT}:${EL_P2P_PORT}/tcp
+      - ${EL_P2P_PORT}:${EL_P2P_PORT}/udp
     labels:
       - traefik.enable=true
       - traefik.http.routers.opera.service=opera
       - traefik.http.routers.opera.entrypoints=websecure
-      - traefik.http.routers.opera.rule=Host(`${EC_HOST}.${DOMAIN}`)
+      - traefik.http.routers.opera.rule=Host(`${EL_HOST}.${DOMAIN}`)
       - traefik.http.routers.opera.tls.certresolver=letsencrypt
       - traefik.http.routers.operalb.service=opera
       - traefik.http.routers.operalb.entrypoints=websecure
-      - traefik.http.routers.operalb.rule=Host(`${EC_LB}.${DOMAIN}`)
+      - traefik.http.routers.operalb.rule=Host(`${EL_LB}.${DOMAIN}`)
       - traefik.http.routers.operalb.tls.certresolver=letsencrypt
-      - traefik.http.services.opera.loadbalancer.server.port=${EC_RPC_PORT}
+      - traefik.http.services.opera.loadbalancer.server.port=${EL_RPC_PORT}
       - traefik.http.routers.operaws.service=operaws
       - traefik.http.routers.operaws.entrypoints=websecure
-      - traefik.http.routers.operaws.rule=Host(`${EC_WS_HOST}.${DOMAIN}`)
+      - traefik.http.routers.operaws.rule=Host(`${EL_WS_HOST}.${DOMAIN}`)
       - traefik.http.routers.operaws.tls.certresolver=letsencrypt
       - traefik.http.routers.operawslb.service=operaws
       - traefik.http.routers.operawslb.entrypoints=websecure
-      - traefik.http.routers.operawslb.rule=Host(`${EC_WS_LB}.${DOMAIN}`)
+      - traefik.http.routers.operawslb.rule=Host(`${EL_WS_LB}.${DOMAIN}`)
       - traefik.http.routers.operawslb.tls.certresolver=letsencrypt
-      - traefik.http.services.operaws.loadbalancer.server.port=${EC_WS_PORT}
+      - traefik.http.services.operaws.loadbalancer.server.port=${EL_WS_PORT}
     entrypoint:
       - docker-entrypoint.sh
       - opera
@@ -52,14 +49,14 @@ services:
       - --datadir
       - /var/lib/opera
       - --port
-      - ${EC_P2P_PORT}
+      - ${EL_P2P_PORT}
       - --http.port
-      - ${EC_RPC_PORT}
+      - ${EL_RPC_PORT}
       - --ws
       - --ws.addr
       - 0.0.0.0
       - --ws.port
-      - ${EC_WS_PORT}
+      - ${EL_WS_PORT}
       - --ws.api
       - web3,eth,net
       - --genesis
