--- a/polygon-mainnet.env
+++ b/polygon-mainnet.env
@@ -21,10 +21,10 @@ CF_EMAIL=user@example.com
 CF_API_TOKEN=SECRETTOKEN
 AWS_PROFILE=myprofile
 AWS_HOSTED_ZONE_ID=myzoneid
-EC_HOST=ec
-EC_LB=ec-lb
-EC_WS_HOST=ecws
-EC_WS_LB=ecws-lb
+EL_HOST=el
+EL_LB=el-lb
+EL_WS_HOST=elws
+EL_WS_LB=elws-lb
 DDNS_SUBDOMAIN=
 DDNS_PROXY=false
 
