--- a/prysm-consensus.yml
+++ b/prysm-consensus.yml
@@ -26,8 +26,8 @@ services:
     volumes:
       - prysmconsensus-data:/var/lib/prysm
       - /etc/localtime:/etc/localtime:ro
-    expose:
-      - 8080/tcp
+    environment:
+      - RAPID_SYNC_URL=${RAPID_SYNC_URL:-''}
     ports:
       - ${PRYSM_PORT}:${PRYSM_PORT}/tcp
       - ${PRYSM_UDP_PORT}:${PRYSM_UDP_PORT}/udp
@@ -71,15 +71,15 @@ services:
       - "8008"
     labels:
       - traefik.enable=true
-      - traefik.http.routers.cc.entrypoints=websecure
-      - traefik.http.routers.cc.rule=Host(`${CL_HOST}.${DOMAIN}`)
-      - traefik.http.routers.cc.service=cc
-      - traefik.http.routers.cc.tls.certresolver=letsencrypt
-      - traefik.http.routers.cclb.service=cc
-      - traefik.http.routers.cclb.entrypoints=websecure
-      - traefik.http.routers.cclb.rule=Host(`${CL_LB}.${DOMAIN}`)
-      - traefik.http.routers.cclb.tls.certresolver=letsencrypt
-      - traefik.http.services.cc.loadbalancer.server.port=5052
+      - traefik.http.routers.cl.entrypoints=websecure
+      - traefik.http.routers.cl.rule=Host(`${CL_HOST}.${DOMAIN}`)
+      - traefik.http.routers.cl.service=cl
+      - traefik.http.routers.cl.tls.certresolver=letsencrypt
+      - traefik.http.routers.cllb.service=cl
+      - traefik.http.routers.cllb.entrypoints=websecure
+      - traefik.http.routers.cllb.rule=Host(`${CL_LB}.${DOMAIN}`)
+      - traefik.http.routers.cllb.tls.certresolver=letsencrypt
+      - traefik.http.services.cl.loadbalancer.server.port=5052
   eth:
     image: tianon/true
     restart: "no"
