--- a/nimbus-base.yml
+++ b/nimbus-base.yml
@@ -23,7 +23,7 @@ services:
       - nimbus-data:/var/lib/nimbus
       - /etc/localtime:/etc/localtime:ro
     environment:
-      - RAPID_SYNC_URL=${RAPID_SYNC_URL:-''}
+      - RAPID_SYNC_URL=${RAPID_SYNC_URL}
       - NETWORK=${NETWORK}
     ports:
       - ${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/tcp
@@ -83,7 +83,7 @@ services:
       - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
       - /etc/localtime:/etc/localtime:ro
     environment:
-      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
+      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD}
     entrypoint:
       - validator-import.sh
       - /usr/local/bin/nimbus_beacon_node
