--- a/teku-base.yml
+++ b/teku-base.yml
@@ -24,7 +24,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     environment:
       - JAVA_OPTS=-XX:SoftMaxHeapSize=2g -Xmx4g
-      - RAPID_SYNC_URL=${RAPID_SYNC_URL:-''}
+      - RAPID_SYNC_URL=${RAPID_SYNC_URL}
     ports:
       - ${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/tcp
       - ${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/udp
@@ -83,7 +83,7 @@ services:
       - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
       - /etc/localtime:/etc/localtime:ro
     environment:
-      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-''}
+      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD}
     entrypoint: validator-import.sh
   validator-exit:
     restart: "no"
