--- a/lh-consensus.yml
+++ b/lh-consensus.yml
@@ -23,7 +23,7 @@ services:
       - lhconsensus-data:/var/lib/lighthouse
       - /etc/localtime:/etc/localtime:ro
     environment:
-      - RAPID_SYNC_URL=${RAPID_SYNC_URL:-''}
+      - RAPID_SYNC_URL=${RAPID_SYNC_URL}
     ports:
       - ${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/tcp
       - ${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/udp
