--- a/lh-validator.yml
+++ b/lh-validator.yml
@@ -69,7 +69,7 @@ services:
       - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
       - /etc/localtime:/etc/localtime:ro
     environment:
-      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-''}
+      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD}
       - NETWORK=${NETWORK}
     entrypoint:
       - validator-import.sh
