--- a/lodestar-validator.yml
+++ b/lodestar-validator.yml
@@ -46,7 +46,7 @@ services:
       - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
       - /etc/localtime:/etc/localtime:ro
     environment:
-      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-''}
+      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD}
     entrypoint:
       - validator-import.sh
       - node
