--- a/nimbus-consensus.yml
+++ b/nimbus-consensus.yml
@@ -23,7 +23,7 @@ services:
       - nimbus-consensus-data:/var/lib/nimbus
       - /etc/localtime:/etc/localtime:ro
     environment:
-      - RAPID_SYNC_URL=${RAPID_SYNC_URL:-''}
+      - RAPID_SYNC_URL=${RAPID_SYNC_URL}
       - NETWORK=${NETWORK}
     ports:
       - ${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/tcp
