--- a/prysm-validator.yml
+++ b/prysm-validator.yml
@@ -113,8 +113,8 @@ services:
       - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
       - /etc/localtime:/etc/localtime:ro
     environment:
-      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-''}
-      - WALLET_PASSWORD=${WALLET_PASSWORD:-''}
+      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD}
+      - WALLET_PASSWORD=${WALLET_PASSWORD}
     entrypoint:
       - validator-import.sh
       - validator
