--- a/prysm-web-shared.yml
+++ b/prysm-web-shared.yml
@@ -2,4 +2,4 @@ version: "3.4"
 services:
   validator:
     ports:
-      - ${PRYSM_WEB_PORT}:${PRYSM_WEB_PORT}/tcp
+      - ${KEY_API_PORT}:${KEY_API_PORT}/tcp
