Fix Prysm parameters

--- a/prysm-consensus.yml
+++ b/prysm-consensus.yml
@@ -51,8 +51,6 @@ services:
       - --grpc-gateway-port
       - "5052"
       - --http-web3provider
-      - ${EL_NODE}
-      - --execution-provider
       - ${EL_NODE_EXECUTION}
       - --jwt-secret
       - /secrets/jwtsecret
@@ -73,7 +71,7 @@ services:
       - /configs/config.yaml
       - --bootstrap-node
       - ${ENR}
-      - --fee-recipient
+      - --suggested-fee-recipient
       - ${REWARDS_TO}
     labels:
       - traefik.enable=true
