Highly experimental Akula

--- a/default.env
+++ b/default.env
@@ -119,6 +119,11 @@ ERIGON_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=
 ERIGON_DOCKER_TAG=stable
 ERIGON_DOCKERFILE=Dockerfile.binary
 
+#Akula
+AKULA_SRC_BUILD_TARGET=master
+AKULA_DOCKER_TAG=
+AKULA_DOCKERFILE=Dockerfile.source
+
 # OpenEthereum
 OE_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 OE_DOCKER_TAG=latest
@@ -139,7 +144,7 @@ BESU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1)
 BESU_DOCKER_TAG=latest
 BESU_DOCKERFILE=Dockerfile.binary
 
-# eth2.0-deposit-cli
+# staking-deposit-cli
 DEPCLI_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 # Does not (yet?) exist on Docker hub
 DEPCLI_DOCKER_TAG=nonesuch
