--- a/staking-deposit-cli/Dockerfile
+++ b/staking-deposit-cli/Dockerfile
@@ -5,7 +5,7 @@ ARG BUILD_TARGET
 RUN mkdir -p /src
 
 WORKDIR /src
-RUN bash -c "git clone https://github.com/ethereum/eth2.0-deposit-cli.git && cd eth2.0-deposit-cli && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET}"
+RUN bash -c "git clone https://github.com/ethereum/staking-deposit-cli.git && cd staking-deposit-cli && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET}"
 
 FROM python:3.9-alpine
 
@@ -24,8 +24,8 @@ RUN adduser \
 
 WORKDIR /app
 
-COPY --from=builder /src/eth2.0-deposit-cli/requirements.txt /src/eth2.0-deposit-cli/setup.py ./
-COPY --from=builder /src/eth2.0-deposit-cli/staking_deposit ./staking_deposit
+COPY --from=builder /src/staking-deposit-cli/requirements.txt /src/staking-deposit-cli/setup.py ./
+COPY --from=builder /src/staking-deposit-cli/staking_deposit ./staking_deposit
 
 RUN apk add --update gcc libc-dev linux-headers bash su-exec
 
