--- a/teku-validator.yml
+++ b/teku-validator.yml
@@ -49,7 +49,7 @@ services:
       - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
       - /etc/localtime:/etc/localtime:ro
     environment:
-      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-''}
+      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
     entrypoint: validator-import.sh
   validator-exit:
     restart: "no"
