--- a/besu.yml
+++ b/besu.yml
@@ -63,8 +63,8 @@ services:
       - --engine-host-allowlist=*
       - --engine-jwt-enabled=true
       - --engine-jwt-secret=/var/lib/besu/jwtsecret
-      - --engine-rpc-http-port=8551
-      - --engine-rpc-ws-port=8550
+      - --engine-rpc-enabled=true
+      - --engine-rpc-port=8551
       - --logging
       - ${LOG_LEVEL}
       - --metrics-enabled
