--- a/default.env
+++ b/default.env
@@ -5,7 +5,7 @@ REWARDS_TO=
 # Execution client endpoint / chain source. This default uses the execution node container.
 # Nimbus requires the URL to be ws:// or wss://, e.g. ws://execution:8546
 EL_NODE=http://execution:8545
-# Make this ws:// for Nimbus. Please note Besu uses http://execution:8551 and ws://execution 8550
+# Make this ws:// for Nimbus.
 EL_NODE_EXECUTION=http://execution:8551
 # Graffiti to use for validator
 GRAFFITI=eth-docker
