Enable MEV boost for Lighthouse

--- a/default.env
+++ b/default.env
@@ -1,7 +1,11 @@
 # Client choice: See https://eth-docker.net/docs/Usage/ClientSetup for available options
-COMPOSE_FILE=lh-base.yml:geth.yml:deposit-cli.yml
+COMPOSE_FILE=lh-base.yml:geth.yml:mev-boost.yml:deposit-cli.yml
 # Set the ETH address that priority fees should be sent to
 REWARDS_TO=
+# Decide whether to connect the CL to Flashbots MEV boost. Set to "true" for MEV
+# boost, or any other value including empty for not using MEV boost.
+# If "true" it also requires mev-boost.yml in COMPOSE_FILE
+MEV_BOOST=true
 # Execution client endpoint / chain source. This default uses the execution node container.
 # Nimbus requires the URL to be ws:// or wss://, e.g. ws://execution:8546
 EL_NODE=http://execution:8545
@@ -94,6 +98,11 @@ LOG_LEVEL=info
 
 # SSV
 SSV_NODE_TAG=latest
+
+# MEV-Boost
+MEV_SRC_BUILD_TARGET=master
+MEV_DOCKER_TAG=latest
+MEV_DOCKERFILE=Dockerfile.binary
 
 # Nimbus
 NIM_SRC_BUILD_TARGET=unstable
