--- a/lighthouse/Dockerfile.binary
+++ b/lighthouse/Dockerfile.binary
@@ -47,6 +47,7 @@ RUN set -eux; \
 # Scripts that handle permissions
 COPY ./validator-import.sh /usr/local/bin/
 COPY ./validator-exit.sh /usr/local/bin/
+COPY ./docker-entrypoint.sh /usr/local/bin
 
 # For voluntary exit
 ENV KEYSTORE=nonesuch
