--- a/lighthouse/Dockerfile.source
+++ b/lighthouse/Dockerfile.source
@@ -67,6 +67,7 @@ COPY --from=builder /usr/local/cargo/bin/lighthouse /usr/local/bin/
 # Scripts that handle permissions
 COPY ./validator-import.sh /usr/local/bin/
 COPY ./validator-exit.sh /usr/local/bin/
+COPY ./docker-entrypoint.sh /usr/local/bin/
 
 # For voluntary exit
 ENV KEYSTORE=nonesuch
