Add mev boost to ethd config

--- a/default.env
+++ b/default.env
@@ -2,10 +2,11 @@
 COMPOSE_FILE=lh-base.yml:geth.yml:mev-boost.yml:deposit-cli.yml
 # Set the ETH address that priority fees should be sent to
 REWARDS_TO=
-# Decide whether to connect the CL to Flashbots MEV boost. Set to "true" for MEV
+# Decide whether to connect the CL to Flashbots MEV boost. Set MEV_BOOST to "true" for MEV
 # boost, or any other value including empty for not using MEV boost.
 # If "true" it also requires mev-boost.yml in COMPOSE_FILE
 MEV_BOOST=true
+MEV_RELAYS=https://builder-relay-kiln.flashbots.net/
 # Execution client endpoint / chain source. This default uses the execution node container.
 # Nimbus requires the URL to be ws:// or wss://, e.g. ws://execution:8546
 EL_NODE=http://execution:8545
