--- a/flashbots/Dockerfile.binary
+++ b/flashbots/Dockerfile.binary
@@ -4,9 +4,15 @@ FROM flashbots/mev-boost:${DOCKER_TAG} as mev
 # Unused, this is here to avoid build time complaints
 ARG BUILD_TARGET
 
-FROM debian:bullseye-slim
+ARG USER=mev
+ARG UID=10666
 
-RUN mkdir -p /app
-COPY --from=mev /app/ /app
+# See https://stackoverflow.com/a/55757473/12429735RUN
+RUN adduser \
+    --disabled-password \
+    --gecos "" \
+    --shell "/sbin/nologin" \
+    --uid "${UID}" \
+    "${USER}"
 
-ENTRYPOINT ["/app/mev-boost"]
+USER ${USER}
