Query for rewards address and start using it in lh-validator.yml

--- a/default.env
+++ b/default.env
@@ -1,5 +1,7 @@
 # Client choice: See https://eth-docker.net/docs/Usage/ClientSetup for available options
 COMPOSE_FILE=teku-base.yml:geth.yml
+# Set the ETH address that priority fees and MEV rewards should be sent to
+REWARDS_TO=
 # Execution client endpoint / chain source. This default uses the execution node container.
 # For Teku and Lighthouse, you can specify multiple endpoints separated by commas
 # This needs to be ws:// or ws:// if using Nimbus, e.g. ws://execution:8546
