--- a/default.env
+++ b/default.env
@@ -1,5 +1,5 @@
 # Client choice: See https://eth-docker.net/docs/Usage/ClientSetup for available options
-COMPOSE_FILE=teku-base.yml:geth.yml
+COMPOSE_FILE=teku-base.yml:besu.yml
 # Set the ETH address that priority fees and MEV rewards should be sent to
 REWARDS_TO=
 # Execution client endpoint / chain source. This default uses the execution node container.
@@ -11,10 +11,8 @@ EL_FALLBACK_NODE1=http://execution:8545
 EL_FALLBACK_NODE2=http://execution:8545
 # Graffiti to use for validator
 GRAFFITI=eth-docker
-# Network to use for consensus client. If using main net, set to mainnet.
-NETWORK=prater
-# Network to use for execution client. If using main net, set to mainnet.
-EL_NETWORK=goerli
+# Merged network to use. If using main net, set to mainnet.
+NETWORK=ropsten
 # Some clients suggest adjusting to higher (or lower) peer count. Adjust here, per client
 PRYSM_PEER_COUNT=45
 LH_PEER_COUNT=80
