--- a/besu/Dockerfile.source
+++ b/besu/Dockerfile.source
@@ -33,10 +33,11 @@ RUN adduser \
     --uid "${UID}" \
     "${USER}"
 
-RUN mkdir -p /var/lib/besu && chown -R ${USER}:${USER} /var/lib/besu && chmod -R 700 /var/lib/besu
+RUN mkdir -p /var/lib/besu/secrets && chown -R besu:besu /var/lib/besu && chmod -R 700 /var/lib/besu && chmod 755 /var/lib/besu/secrets
 
 # Copy executable
 COPY --from=builder /usr/src/besu/build/install/besu/. /opt/besu/
+COPY ./docker-entrypoint.sh /usr/local/bin/
 
 USER ${USER}
 
