--- a/lh-base.yml
+++ b/lh-base.yml
@@ -94,6 +94,8 @@ services:
       - --http-allow-origin
       - "*"
       - --unencrypted-http-transport
+      - --suggested-fee-recipient
+      - ${REWARDS_TO}
     depends_on:
       - consensus
   get-keyapi-token:
