--- a/teku-base.yml
+++ b/teku-base.yml
@@ -61,6 +61,7 @@ services:
       - --validator-api-cors-origins=*
       - --validator-api-keystore-file=/var/lib/teku/teku-keyapi.keystore
       - --validator-api-keystore-password-file=/var/lib/teku/teku-keyapi.password
+      - --validators-proposer-default-fee-recipient=${REWARDS_TO}
   get-keyapi-token:
     restart: "no"
     image: alpine:latest
