Add validator-list command

--- a/lh-base.yml
+++ b/lh-base.yml
@@ -165,12 +165,29 @@ services:
     user: lhvalidator
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
+      - /etc/localtime:/etc/localtime:ro
+    entrypoint:
+      - lighthouse
+      - account
+      - validator
+      - --datadir
+      - /var/lib/lighthouse
+      - --network
+      - ${NETWORK}
+      - --debug-level=${LOG_LEVEL}
+  validator-list:
+    restart: "no"
+    image: lighthouse:local
+    user: lhvalidator
+    volumes:
+      - lhvalidator-data:/var/lib/lighthouse
       - ${DEPCLI_LOCALDIR}:/interchange
       - /etc/localtime:/etc/localtime:ro
     entrypoint:
       - lighthouse
       - account
       - validator
+      - list
       - --datadir
       - /var/lib/lighthouse
       - --network
