--- a/lodestar-base.yml
+++ b/lodestar-base.yml
@@ -138,6 +138,24 @@ services:
       - /var/lib/lodestar/validators
       - --network
       - ${NETWORK}
+  validator-list:
+    restart: "no"
+    image: lodestar:local
+    user: lsvalidator
+    volumes:
+      - lsvalidator-data:/var/lib/lodestar/validators
+      - /etc/localtime:/etc/localtime:ro
+    entrypoint:
+      - node
+      - --max-old-space-size=8192
+      - /usr/app/node_modules/.bin/lodestar
+      - account
+      - validator
+      - list
+      - --rootDir
+      - /var/lib/lodestar/validators
+      - --network
+      - ${NETWORK}
   eth:
     image: tianon/true
     restart: "no"
