Fix some of the Prysm commands

--- a/prysm/Dockerfile.binary
+++ b/prysm/Dockerfile.binary
@@ -68,3 +68,4 @@ COPY --from=vcsource /app/cmd/validator/validator /usr/local/bin/
 COPY ./validator-import.sh /usr/local/bin/
 COPY ./create-wallet.sh /usr/local/bin/
 USER ${USER}
+ENTRYPOINT ["validator"]
