Support for building Lighthouse from pr IDs

--- a/default.env
+++ b/default.env
@@ -116,6 +116,7 @@ TEKU_DOCKER_TAG=develop
 TEKU_DOCKERFILE=Dockerfile.source
 
 # Lighthouse
+# SRC build target can be a tag, a branch, or a pr as "pr-ID"
 LH_SRC_BUILD_TARGET=unstable
 LH_DOCKER_TAG=latest-unstable
 LH_DOCKERFILE=Dockerfile.source
