--- a/mev-boost.yml
+++ b/mev-boost.yml
@@ -18,8 +18,8 @@ services:
     image: mev-boost:local-merge
     entrypoint:
       - /app/mev-boost
-      - -host
-      - 0.0.0.0
+      - -addr
+      - 0.0.0.0:18550
       - -relays
       - ${MEV_RELAYS}
     <<: *logging
