--- a/default.env
+++ b/default.env
@@ -2,13 +2,9 @@
 COMPOSE_FILE=teku-base.yml:besu.yml
 # Set the ETH address that priority fees and MEV rewards should be sent to
 REWARDS_TO=
-# Execution client endpoint / chain source. This default uses the execution node container.
-# For Teku and Lighthouse, you can specify multiple endpoints separated by commas
-# This needs to be ws:// or ws:// if using Nimbus, e.g. ws://execution:8546
-EL_NODE=http://execution:8545
-# Execution client fallback nodes, for Prysm or Nimbus. Can't be empty.
-EL_FALLBACK_NODE1=http://execution:8545
-EL_FALLBACK_NODE2=http://execution:8545
+# Authenticated execution client endpoint. This default uses the execution node container.
+# This needs to be ws:// or ws:// if using Nimbus, e.g. ws://execution:8551
+EL_NODE=http://execution:8551
 # Graffiti to use for validator
 GRAFFITI=eth-docker
 # Merged network to use. If using main net, set to mainnet.
@@ -81,6 +77,11 @@ RESTART=unless-stopped
 # If you want debug logs, set this to debug instead of info
 LOG_LEVEL=info
 
+# JWT secret for CL:EL connection. This is created automatically by default.
+# If specified manually here, this could be used to split CL and EL to different
+# machines
+JWT_SECRET=
+
 # You can set specific version targets and choose
 # binary or compiled from source builds below,
 # via `Dockerfile.binary` or `Dockerfile.source`
@@ -141,7 +142,7 @@ NM_DOCKERFILE=Dockerfile.binary
 
 # Besu
 BESU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-BESU_DOCKER_TAG=latest
+BESU_DOCKER_TAG=develop
 BESU_DOCKERFILE=Dockerfile.binary
 
 # staking-deposit-cli
