--- a/teku-base.yml
+++ b/teku-base.yml
@@ -3,7 +3,7 @@ x-logging: &logging
   logging:
     driver: json-file
     options:
-      max-size: 10m
+      max-size: 100m
       max-file: "3"
       tag: '{{.ImageName}}|{{.Name}}|{{.ImageFullID}}|{{.FullID}}'
 
@@ -65,6 +65,7 @@ services:
       - --validator-api-keystore-file=/var/lib/teku/teku-keyapi.keystore
       - --validator-api-keystore-password-file=/var/lib/teku/teku-keyapi.password
       - --validators-proposer-default-fee-recipient=${REWARDS_TO}
+      - --Xnetwork-total-terminal-difficulty-override=${OVERRIDE_TTD}
   get-keyapi-token:
     restart: "no"
     image: alpine:latest
