Added Geth for Ropsten

--- a/default.env
+++ b/default.env
@@ -130,7 +130,7 @@ AKULA_DOCKERFILE=Dockerfile.source
 
 # Go-Ethereum aka Geth
 GETH_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-GETH_DOCKER_TAG=stable
+GETH_DOCKER_TAG=latest
 GETH_DOCKERFILE=Dockerfile.binary
 
 # Nethermind
